6-taking-it-to-next-level/03-jake-and-elwood/css/style.css
/* ###### */
/* GLOBAL */
/* ------ */

* {
   /* border: 1px dotted hotpink; */
   box-sizing: border-box;
}

body,
html {
    margin: 0;
    padding: 0;
}

body {
    color: #404040;
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
    line-height: 1.6;
}

img {
    display: block;
    max-width: 100%;
}

/* ########## */
/* TYPOGRAPHY */
/* ---------- */

h1,
h2,
p { margin-top: 0; }

h1,
h2,
strong { font-weight: 700; }

h1,
h2 { color: black; }

.main-h1,
.main-subtitle-p { text-align: center; }

.main-col-h2,
.main-h2 { font-size: 1.125rem; }

/* ---------- */

.hero-h1 {
    color: white;
    font-size: 1.5rem;
    line-height: 1.4;
}

.main-h1 {
    font-size: 3rem;
    margin-bottom: .3em;
}

/* ---------- */

.footer-p { margin-bottom: 4em; }

.main-subtitle-p {
    justify-self: center;
    font-size: 1.125rem;
    font-weight: bolder;
    margin-bottom: 3em;
}

/* ---------- */

.span-accent { color: #ffe600; }

/* ---------- */

.a-footer-social {
    color: #000;
    font-size: 1.75rem;
    margin: 0 .5em;
}

.a-footer-social:hover { color: #777; }

/* ---------- */

.a-btn {
    display: inline-block;
    font-weight: 700;
    padding: .5em 1.75em;
    text-decoration: none;
}

.a-btn-primary {
    background: #ffe600;
    color: black;
}

.a-btn-hero {
    justify-self: start;
    margin-top: 1em;
}

/* ########## */
/* NAVIGATION */
/* ---------- */

.a-header-logo {
    background: #ffe600;
    padding-top: 2em;
}

.a-header-nav {
    color: white;
    text-decoration: none;
    font-size: 3rem;
    font-weight: 700;
}

.btn {
    background: 0;
    border: 0;
    cursor: pointer;
}

.btn--header-nav-close {
    color: #ffe600;
    font-size: 3rem;
    font-weight: 700;
    padding: .5em;
    position: absolute;
}

.btn--header-nav-open {
    color: white;
    font-size: 2rem;
    margin-left: auto;
    padding: 0;
}

.header-container {
    /* align items center is a hack for Safari */
    /* prevent small screen nav content */
    /* vertical shifting out of the screen top */
    align-items: center;
    display: flex;
}

.header-nav {
    background: black;
    /* left:value shifts this to right, off of the canvas */
    position: fixed; top: 0; bottom: 0; left: 100vw;
    transform: translateX(0);
    /* transition close/open states smoothly */
    transition: transform 250ms;
    /* prevent shrinking when shifted to the right */
    width: 100vw;
}

/* a state (modifier) class */
/* is added|removed in js/script.js */
.header-nav--open { transform: translateX(-100vw); }

.header-nav-ul {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-around;
    list-style: none;
    margin: 0;
    padding: 0;
}

/* ###### */
/* LAYOUT */
/* ------ */

footer,
.main-about,
.main-section-main-home { padding: 4em 0; }

.header-container,
.main-about > *,
.main-section-hero > *,
.main-section-main-home > * { grid-column: 2 / -2; }

/* ------ */

.base-grid {
    display: grid;
    grid-template-columns: minmax(1em, 1fr) minmax(0, 500px) minmax(1em, 1fr);
}

footer {
    background: #ebebeb;
    grid-template-areas:
        ". social ."
        ". main .";
    text-align: center;
}

.footer-aside-social {
    grid-area: social;
    margin-bottom: 2em;
}

.footer-section-main {
    grid-area: main;
    opacity: .4;
}

header { background: black; }

.header-home {
    background: transparent;
    position: absolute;
    width: 100vw;
}

.main-col-home {
    margin-top: 1.25em;
    text-align: center;
}

.main-section-hero {
    background-image: url(../img/hero-bg.jpg);
    background-size: cover;
    background-position: bottom;
    color: white;
    padding: 8em 0 4em;
}

/* ------ */

.footer-img-logo { margin: 0 auto 1em; }

.main-img {
    box-shadow: 5px 5px black, 10px 10px #ffe600;
    justify-self: center;
    margin-bottom: 4em;
}

/* ############# */
/* MEDIA QUERIES */
/* ------------- */

@media (min-width: 400px) { .main-section-hero > * { margin-right: 20%; } }

@media (min-width: 600px) {

    .a-header-nav {
        font-size: 1rem;
        margin-left: 2em;
    }

    .btn--header-nav-close,
    .btn--header-nav-open { display: none; }

    /* completely clear/undo .header-nav */
    /* mobile 1st (small screen) styling */
    /* (i.e. positioning & sizing) */
    .header-nav {
        position: unset;
        width: unset;
    }

    .header-nav--home { background: transparent; }

    /* un-slide (now large screen) .header-nav back into viewport */
    /* upon resizing browser window up with small screen .header-nav open */
    /* i.e., undo still active .header-nav--open { transform: translate(-100vw); } */
    .header-nav--open { transform: translateX(0); }

    .header-nav-ul {
        flex-direction: row;
        justify-content: flex-start;
    }

    /* ------------- */

    .main-section-hero > * { grid-column: 2 / span 2; }

    .main-section-main-home > * { grid-column: span 1; }

    /* ------------- */

    .base-grid {
        grid-template-columns: minmax(1em, 1fr) repeat(3, minmax(150px, 320px)) minmax(1em, 1fr);
        column-gap: 2em;
    }

    footer { grid-template-areas: ". main main social ."; }

    .footer-aside-social {
        align-self: center;
        margin-bottom: unset;
        text-align: right;
    }

    .footer-section-main { text-align: left; }

    .main-col-home:first-child { grid-column: 2; }

    .main-img { grid-column: 2; }

    .main-section-hero { padding: 8em 0 6em; }

    .main-section-main { grid-column: 3 / -2; }

    .main-subtitle-p {
        max-width: 640px;
        width: 80%;
    }

    /* ------------- */

    .footer-img-logo { margin-left: 0 }
}

